force-app/main/default/objects/Vehicle__c/fields/Last_Service_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Check__c</fullName>
    <label>Last Service Check</label>
    <type>Date</type>
</CustomField>