force-app/main/default/objects/Vehicle__c/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <label>VIN Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>